--- a/.github/workflows/weekly-retrain.yml
+++ b/.github/workflows/weekly-retrain.yml
@@ -44,9 +44,9 @@ jobs:
       - name: Fetch latest data
         run: |
           echo "Fetching latest price data for all tickers..."
-          python scripts/fetch_data.py fetch-all --ticker SPY
-          python scripts/fetch_data.py fetch-all --ticker QQQ
-          python scripts/fetch_data.py fetch-all --ticker IWM
+          python scripts/fetch_data.py main --ticker SPY
+          python scripts/fetch_data.py main --ticker QQQ
+          python scripts/fetch_data.py main --ticker IWM
 
       - name: Check for model drift
         id: drift-check
