Fix fetch_data CLI options in workflows

--- a/.github/workflows/daily-signals.yml
+++ b/.github/workflows/daily-signals.yml
@@ -68,9 +68,7 @@ jobs:
         if: steps.market-check.outcome == 'success'
         run: |
           echo "Fetching latest price data..."
-          python scripts/fetch_data.py main --ticker SPY || true
-          python scripts/fetch_data.py main --ticker QQQ || true
-          python scripts/fetch_data.py main --ticker IWM || true
+          python scripts/fetch_data.py main --tickers SPY,QQQ,IWM --with-features || true
 
       - name: Check if models exist
         if: steps.market-check.outcome == 'success'
