--- a/.github/workflows/daily-signals.yml
+++ b/.github/workflows/daily-signals.yml
@@ -17,6 +17,7 @@ on:
 
 env:
   FINNHUB_API_KEY: ${{ secrets.FINNHUB_API_KEY }}
+  FRED_API_KEY: ${{ secrets.FRED_API_KEY }}
 
 jobs:
   generate-signals:
